@@ -1,6 +1,0 @@
-# -*- test-case-name: buildbot.test.test_twisted -*-
-
-# legacy compatibility
-
-from buildbot.steps.python_twisted import HLint, Trial, ProcessDocs, BuildDebs
-from buildbot.steps.python_twisted import RemovePYCs
