@@ -340,37 +340,6 @@ class SlaveVersion(RunMixin, unittest.TestCase):
         return d
 
 
-class ReorgCompatibility(unittest.TestCase):
-    def testCompat(self):
-        from buildbot.process.step import LogObserver, LogLineObserver
-        from buildbot.process.step import RemoteShellCommand
-        from buildbot.process.step import BuildStep, LoggingBuildStep
-        from buildbot.process.step import ShellCommand, WithProperties
-        from buildbot.process.step import TreeSize
-        from buildbot.process.step import Configure
-        from buildbot.process.step import Compile
-        from buildbot.process.step import Test
-        from buildbot.process.step import CVS
-        from buildbot.process.step import SVN
-        from buildbot.process.step import Darcs
-        from buildbot.process.step import Git
-        from buildbot.process.step import Arch
-        from buildbot.process.step import Bazaar
-        from buildbot.process.step import Mercurial
-        from buildbot.process.step import P4
-        from buildbot.process.step import P4Sync
-        from buildbot.process.step import Dummy
-        from buildbot.process.step import FailingDummy
-        from buildbot.process.step import RemoteDummy
-
-        # now trick pyflakes into thinking we care
-        unused = [LogObserver, LogLineObserver, RemoteShellCommand,
-                  BuildStep, LoggingBuildStep, ShellCommand, WithProperties,
-                  TreeSize, Configure, Compile, Test, CVS, SVN, Darcs,
-                  Git, Arch, Bazaar, Mercurial, P4, P4Sync,
-                  Dummy, FailingDummy, RemoteDummy]
-
-
 class _SimpleBuildStep(buildstep.BuildStep):
     def start(self):
         args = {"arg1": "value"}
