@@ -1,5 +1,10 @@
 2006-12-11  Brian Warner  <warner@lothar.com>
 
+	* buildbot/process/step.py: remove this file, these names were
+	deprecated in 0.7.5 and are now being removed.
+	* buildbot/process/step_twisted.py: same
+	* buildbot/test/test_steps.py (ReorgCompatibility): remove test
+
 	* buildbot/twcompat.py: remove the empty file, yay it is gone
 
 	* buildbot/twcompat.py (waitForDeferred): remove the monkeypatch,
